--- a/src/view/MainLayout.css
+++ b/src/view/MainLayout.css
@@ -28,10 +28,10 @@
 .nav-bar{
     margin-top: 0;
     width: 100%;
-    height: 45px;
+    height: 55px;
     float: top;
     background-color: white;
-    box-shadow: 0 0 80px 4px black;
+    box-shadow: 0 0 80px 3px black;
 }
 
 .middle-panel{
@@ -40,6 +40,40 @@
     height: 600px;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 0 0 80px 4px black;
+    box-shadow: 0 0 80px 3px black;
     background-color: white;
+}
+
+.logo-main{
+    float: left;
+    font-family: "Harlow Solid Italic",serif;
+    font-size: 150%;
+    margin-left: 20%;
+    margin-top: 7px;
+    margin-right: 1%;
+}
+
+.button-nav-bar{
+    float: left;
+    margin-top: 15px;
+    margin-left: .5%;
+    font-family: "Biko", sans-serif;
+    font-size: small;
+    cursor: pointer;
+    color: #2f5597;
+    background: transparent;
+    border: transparent;
+}
+
+.logout-button{
+    float: right;
+    margin-top: 15px;
+    margin-left: 1%;
+    margin-right: 22%;
+    font-family: "Biko", sans-serif;
+    font-size: small;
+    cursor: pointer;
+    color: #2f5597;
+    background: transparent;
+    border: transparent;
 }
