reorganized views, added courselookup view

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -1,17 +1,17 @@
 
 @font-face {
     font-family: "Harlow Solid Italic";
-    src: url("../font/HarlowSolidItalic.TTF")
+    src: url("../../font/HarlowSolidItalic.TTF")
 }
 
 @font-face {
     font-family: "Calibri Light";
-    src: url("../font/CalibriLight.ttf")
+    src: url("../../font/CalibriLight.ttf")
 }
 
 @font-face {
     font-family: "Biko";
-    src: url("../font/Biko.otf")
+    src: url("../../font/Biko.otf")
 }
 
 .body{
