--- a/src/view/credentials/Login.css
+++ b/src/view/credentials/Login.css
@@ -24,3 +24,12 @@
     border-bottom: solid 1px grey;
     color: dimgrey;
 }
+
+.error-message{
+    font-family: "Calibri Light", serif;
+    color: red;
+    font-size: small;
+    margin-bottom: 3px;
+    min-height:12px;
+    max-width:70%;
+}
