--- a/src/chat/ChatSessionView.css
+++ b/src/chat/ChatSessionView.css
@@ -1,7 +1,23 @@
 .message_container{
-    width:100%;
-    max-height:400px;
-    background-color: lightgoldenrodyellow;
+    background-color: lightcoral;
+    height: 550px;
     overflow-y: auto;
+    width: 95% ;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 15px;
 }
 
+.message_entry{
+    background-color: darkseagreen;
+    width: 100%;
+    margin-bottom: 2px;
+    font-size: smaller;
+}
+
+.message_input{
+    width: 94%;
+    margin-left: 2.5%;
+    margin-right: auto;
+    margin-top: 10px;
+}
