fixed resizing issue for mac when browser default has shorter height

--- a/src/chat/ChatPortalView.css
+++ b/src/chat/ChatPortalView.css
@@ -4,7 +4,7 @@
     margin-right: auto;
     margin-top: 15px;
     width: 90%;
-    height: 600px;
+    height: 75vh;
 }
 
 .search_box_new_chat_bar {
