--- a/src/chat/ChatView.css
+++ b/src/chat/ChatView.css
@@ -2,7 +2,8 @@
 .chat_view_container{
     min-width:500px;
     width: 100%;
-    height: 630px;
+    /*min-height: 500px;*/
+    height: 80vh;
     background-color: blueviolet;
     margin-left: auto;
     margin-right: auto;
