--- a/src/view/MainLayout.css
+++ b/src/view/MainLayout.css
@@ -46,7 +46,7 @@
     margin-top: 1.5%;
     min-width:500px;
     width: 70%;
-    min-height: 630px;
+    /*min-height: 500px;*/
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 0 40px 3px black;
