--- a/src/chat/ChatPortalView.css
+++ b/src/chat/ChatPortalView.css
@@ -40,9 +40,22 @@
 
 .portal_entry{
     background-color: azure;
+    margin-bottom: 2px;
     float: top;
     width: 100%;
-    height: 40px;
     cursor: pointer;
     vertical-align: middle;
+    font-size: smaller;
+}
+
+
+.portal_entry_unread{
+    background-color: red;
+    margin-bottom: 2px;
+    float: top;
+    width: 100%;
+    cursor: pointer;
+    vertical-align: middle;
+    font-size: smaller;
+    font-weight: bolder;
 }
