fixed upload profile pic

--- a/src/view/credentials/Login.css
+++ b/src/view/credentials/Login.css
@@ -33,3 +33,9 @@
     min-height:12px;
     max-width:70%;
 }
+
+.third-party-button{
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+}
