--- a/src/chat/ChatSessionView.css
+++ b/src/chat/ChatSessionView.css
@@ -1,10 +1,17 @@
 .message_container {
-    height: calc(85vh - 100px);;
-    overflow-y: auto;
+    max-height: 80%;
+    height: calc(90vh - 120px);
+    overflow-y: scroll;
     width: 95%;
     margin-left: auto;
     margin-right: auto;
     margin-top: 15px;
+}
+
+.input_holder {
+    width: 100%;
+    height: 7vh;
+    border-top: solid 1px lightgrey;
 }
 
 ::-webkit-scrollbar {
@@ -21,14 +28,13 @@
 }
 
 .message_input {
-    width: 90%;
-    margin-left: 2.5%;
-    margin-right: auto;
-    margin-top: 10px;
-    border: solid 1px lightgrey;
-    border-radius: 10px;
+    width: 95%;
     padding-left: 10px;
     padding-right: 10px;
+    padding-top: 5px;
+    overflow: scroll;
+    border: transparent;
+    font-size: small;
 }
 
 .sender {
@@ -47,7 +53,7 @@
 }
 
 .bubble_right {
-    background: linear-gradient(to right, transparent, #93ede2);
+    background: linear-gradient(to right, transparent, #ebebeb);
     max-width: 70%;
     text-align: right;
     margin-left: 30%;
