--- a/src/chat/ChatPortalView.css
+++ b/src/chat/ChatPortalView.css
@@ -15,22 +15,21 @@
 }
 
 .portal-search-box {
+    border-radius: 10px;
     margin-left: 20px;
     width: calc(100% - 90px);
     height: 25px;
-    font-family: "Biko", sans-serif;
     font-size: smaller;
     background-color: #ebebeb;
     color: dimgrey;
     border: none;
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .portal-new-chat-button {
     margin-left: 5px;
     height: 25px;
-    font-family: "Biko", sans-serif;
     font-size: smaller;
     border: none;
     background: transparent;
@@ -39,7 +38,7 @@
 
 .below_search_chat_bar {
     float: top;
-    height: calc(100% - 40px);
+    height: calc(100% - 20px);
     width: 100%;
     overflow-y: auto;
     overflow-x: hidden;
@@ -52,8 +51,19 @@
 
 .chat_icon_container {
     float: left;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    align-items: center;
+    border-radius: 50%;
+    border: solid 1px #ebebeb;
+    margin-left: 10px;
+}
+
+.chat_icon_container_active{
+    float: left;
+    width: 55px;
+    height: 55px;
     overflow: hidden;
     align-items: center;
     border-radius: 50%;
@@ -68,28 +78,28 @@
 
 .portal_text_container {
     float: left;
-    width: calc(100% - 80px);
+    width: calc(100% - 100px);
     margin-left: 15px;
     margin-top: 5px;
-    font-family: "Biko", sans-serif;
+    font-size: smaller;
 }
 
 .portal_entry {
-    height: 60px;
+    height: 50px;
     float: top;
     width: 100%;
     padding: 5px;
     cursor: pointer;
-    font-size: smaller;
+    border-bottom: solid 1px lightgrey;
 }
 
 .portal_entry_unread {
-    height: 60px;
+    height: 40px;
     float: top;
     width: 100%;
     padding: 5px;
     cursor: pointer;
-    font-size: smaller;
+    border-bottom: solid 1px lightgrey;
     font-weight: bolder;
 }
 
@@ -100,7 +110,7 @@
     width: 100%;
     padding: 5px;
     cursor: pointer;
-    font-size: smaller;
+    border-bottom: solid 1px lightgrey;
 }
 
 .portal_time {
