--- a/src/chat/ChatView.css
+++ b/src/chat/ChatView.css
@@ -1,23 +1,23 @@
 
-.chat_view_container{
-    min-width:500px;
+.chat_view_container {
+    min-width: 500px;
     width: 100%;
     height: calc(90vh - 50px);
     margin-left: auto;
     margin-right: auto;
 }
 
-.portal_container{
+.portal_container {
     float: left;
-    width: 29.7%;
+    width: 300px;
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
 }
 
-.session_container{
+.session_container {
     float: left;
-    width: 70%;
+    width: calc(100% - 301px);
     height: 100%;
     border-left: solid 1px lightgrey;
 }
