--- a/src/chat/ChatSessionView.css
+++ b/src/chat/ChatSessionView.css
@@ -1,16 +1,14 @@
 .message_container {
     max-height: 80%;
-    height: calc(90vh - 120px);
+    height: calc(90vh - 110px);
     overflow-y: scroll;
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 5px;
+    width: calc(100% - 2px);
+    margin-top: 10px;
 }
 
 .input_holder {
     width: 100%;
-    height: 13vh;
+    height: 11vh;
     border-top: solid 1px lightgrey;
 }
 
@@ -25,6 +23,7 @@
     font-size: small;
     font-family: sans-serif;
     resize: none;
+    outline: none;
 }
 
 ::-webkit-scrollbar {
@@ -58,6 +57,8 @@
     border-radius: 50%;
     border: solid 1px #ebebeb;
     margin-right: 10px;
+    margin-left: 2%;
+    cursor: pointer;
 }
 
 .sender_icon {
@@ -70,6 +71,8 @@
     width: 37px;
     height: 1px;
     margin-right: 10px;
+    margin-left: 2%;
+
 }
 
 .sender_message_container {
@@ -95,5 +98,5 @@
     min-height: 20px;
     padding: 4px 10px 3px;
     border-radius: 15px;
-    margin-right: 5%;
+    margin-right: 2%;
 }
