--- a/src/chat/ChatSessionView.css
+++ b/src/chat/ChatSessionView.css
@@ -6,6 +6,12 @@
     margin-top: 10px;
 }
 
+.message_container_bottom_padding {
+    float: left;
+    width: 100%;
+    height: 5px;
+}
+
 .input_holder {
     width: 100%;
     height: 11vh;
@@ -100,3 +106,4 @@
     border-radius: 15px;
     margin-right: 2%;
 }
+
