finished inbox page, fixed a problem where local data is cached even after re register

--- a/src/view/components/PageTitle.css
+++ b/src/view/components/PageTitle.css
@@ -8,8 +8,7 @@
     width: 80%;
     margin-left: auto;
     margin-right: auto;
-    font-size: larger;
-    font-weight: bold;
+    font-size: large;
     padding-top: 15px;
     padding-bottom: 10px;
     border-bottom: solid 1px lightgrey;
