--- a/src/view/social/UserInbox.css
+++ b/src/view/social/UserInbox.css
@@ -32,6 +32,7 @@
     font-size: small;
     margin-top: 10px;
     margin-right: 5px;
+    cursor: pointer;
 }
 
 .goto_rec_friend_button{
@@ -42,3 +43,4 @@
     font-style: italic;
     color: #2f5597;
 }
+
