--- a/src/chat/ChatDetailView.css
+++ b/src/chat/ChatDetailView.css
@@ -2,3 +2,30 @@
     height: 100%;
     overflow-y: scroll;
 }
+
+
+.chat-pic-container {
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    align-items: center;
+    border-radius: 50%;
+    border: solid 1px #ebebeb;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.chat-pic {
+    float: left;
+    height: 101%;
+}
+
+#chat-pic-upload{
+    display: none;
+}
+
+.chat-pic-upload-button{
+    cursor: pointer;
+    color: #2f5597;
+    font-size: small;
+}
