can now change chat title to no max allowed

--- a/src/chat/ChatDetailView.css
+++ b/src/chat/ChatDetailView.css
@@ -1,8 +1,7 @@
-.chat-detail-container{
+.chat-detail-container {
     height: 100%;
     overflow-y: scroll;
 }
-
 
 .chat-pic-container {
     width: 300px;
@@ -20,12 +19,31 @@
     height: 101%;
 }
 
-#chat-pic-upload{
+#chat-pic-upload {
     display: none;
 }
 
-.chat-pic-upload-button{
+.chat-edit-button {
     cursor: pointer;
     color: #2f5597;
-    font-size: small;
+    font-size: smaller;
+    border: transparent;
+    background: transparent;
+}
+
+.chat-pic-upload-button-container {
+    width: 70%;
+    border-bottom: solid 1px lightgrey;
+    padding: 5px;
+}
+
+.new-chat-title-input-box {
+    border-top: transparent;
+    border-left: transparent;
+    border-right: transparent;
+    border-bottom: solid 1px lightgrey;
+    background: transparent;
+    color: black;
+    width: 20%;
+    font-size: smaller;
 }
