--- a/src/chat/StartNewChatView.css
+++ b/src/chat/StartNewChatView.css
@@ -1,6 +1,5 @@
 .start_new_friend_container{
-    background-color: lightcoral;
-    height: calc(85vh - 50px);;
+    height: 95%;
     overflow-y: auto;
     overflow-x: hidden;
     width: 95% ;
@@ -9,56 +8,61 @@
     margin-top: 15px;
 }
 
+.start-new-chat-title{
+    font-family:Helvetica,sans-serif;
+    font-size: large;
+}
+
+.start-new-chat-subtitle{
+    font-size: smaller;
+    color: darkgrey;
+    padding: 5px;
+}
+
 .chat_title_bar {
-    background-color: burlywood;
     width: 100%;
-    height: 40px;
 }
 
 .chat_title_box {
-    float: left;
     margin-top: 9px;
     margin-left: 20px;
-    width: 60%;
-    font-family: "Biko", sans-serif;
-    font-size: smaller;
-    background-color: lightgoldenrodyellow;
-    color: dimgrey;
+    padding-left:5px;
+    width: 30%;
+    font-size: small;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid 1px lightgrey;
+    background: transparent;
 }
 
 .start_chat_button {
-    float: left;
-    margin-top: 9px;
-    margin-left: 10%;
-    font-family: "Biko", sans-serif;
-    font-size: smaller;
+    margin-left: 3px;
+    font-size: small;
+    border:none;
+    background: transparent;
+    color: #2f5597;
+    cursor: pointer;
+    font-style: italic;
 }
 
 .selected_friend_bar {
-    background-color: aqua;
     width: 100%;
     min-height: 20px;
     overflow-x: auto;
+    border-bottom: solid 1px lightgrey;
 }
 
 .selected_friend_entry{
-    float: left;
-    margin-top: 1px;
-    margin-bottom: 1px;
-    margin-left: 2px;
-    background-color: white;
-    font-family: "Biko", sans-serif;
-    font-size: smaller;
+    font-size: small;
 }
 
 .potential_friend_container {
-    background-color: olive;
     width: 100%;
 }
 
 .potential_friend_entry{
     background-color: white;
-    font-family: "Biko", sans-serif;
     font-size: smaller;
     margin-top: 3px;
 }
