--- a/src/chat/StartNewChatView.css
+++ b/src/chat/StartNewChatView.css
@@ -47,7 +47,6 @@
 }
 
 .selected_friend_bar {
-    width: 100%;
     min-height: 20px;
     overflow-x: auto;
     border-bottom: solid 1px lightgrey;
@@ -57,12 +56,32 @@
     font-size: small;
 }
 
-.potential_friend_container {
-    width: 100%;
+.potential_friend_container{
+    margin-top: 7px;
+}
+
+
+.potential_friend_container td{
+    border-bottom: solid 1px lightgrey;
+}
+
+.potential-friend-icon-container {
+    width: 40px;
+    height: 40px;
+    overflow: hidden;
+    align-items: center;
+    border-radius: 50%;
+    border: solid 1px #ebebeb;
+    margin-right: 10px;
+}
+
+
+.potential-friend-icon {
+    height: 100%;
 }
 
 .potential_friend_entry{
     background-color: white;
     font-size: smaller;
-    margin-top: 3px;
+    margin-top: 6px;
 }
