--- a/src/view/profile/FriendProfile.css
+++ b/src/view/profile/FriendProfile.css
@@ -30,7 +30,7 @@
 .friend-profile-button {
     cursor: pointer;
     color: #2f5597;
-    font-size: smaller;
+    font-size: small;
     border: transparent;
     background: transparent;
 }
