--- a/src/view/MainLayout.css
+++ b/src/view/MainLayout.css
@@ -46,11 +46,19 @@
     margin-top: 1.5%;
     min-width:500px;
     width: 65%;
-    /*min-height: 500px;*/
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 0 40px 3px black;
     background-color: white;
+}
+
+.above-middle-panel{
+    margin-top: 1.5%;
+    min-width:500px;
+    width: 65%;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .logo-main{
@@ -84,3 +92,4 @@
     background: transparent;
     border: transparent;
 }
+
