--- a/src/view/profile/UserProfile.css
+++ b/src/view/profile/UserProfile.css
@@ -1,19 +1,3 @@
-#infolist{
-   text-align : center;
-   font-family: Helvetica;
-   color:#3F6699;
-}
-
-.myprofile{
-    text-align: center;
-    font-size: large;
-    margin-top: 10px;
-    margin-right: 5px;  
- }
-
- .profilepicture{
-    text-align:center;
- }
 
 #edit{
     cursor: pointer;
@@ -29,3 +13,34 @@
 #content{
    text-align: center;
 }
+
+.profile-pic-container {
+    width: 300px;
+    height: 300px;
+    overflow: hidden;
+    align-items: center;
+    border-radius: 50%;
+    border: solid 1px #ebebeb;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+.profile-pic {
+    float: left;
+    height: 100%;
+}
+
+#infolist{
+    padding: 5px;
+    font-size: small;
+}
+
+#infolist td {
+    padding-top: 7px;
+    padding-left: 15px;
+    max-width: 350px;
+    vertical-align: top;
+}
+
+
