--- a/src/view/social/UserFriends.css
+++ b/src/view/social/UserFriends.css
@@ -5,13 +5,14 @@
     font-size: 30px;
 }
 .group .button{
-    background-color: #40a798;
-    border: 1px solid white;
-    color: white;
-    padding: 20px 28px;
+    background: none!important;
+    border: none;
+    color: blue;
+    padding: 0;
+    font-size: 20px;
     text-align: center;
     display: block;
-    width: 200px;
+    border-bottom: 1px solid blue;
     cursor: pointer;
 }
 th{
@@ -30,13 +31,12 @@ tr{
     padding: 1px;
 }
 .button_red{
-    border-radius: 100%;
-    background-color: #e20049;
-    border: 1px solid white;
-    color: white;
-    padding: 20px 28px;
+    background:none!important;
+    border: none;
+    color: blue;
+    padding: 0;
     text-align: center;
-    width: 100px;
     cursor: pointer;
+    border-bottom: 1px solid blue;
 }
 
