add animated effect for welcome.js

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -1,4 +1,5 @@
 
+
 @font-face {
     font-family: "Harlow Solid Italic";
     src: url("../../font/HarlowSolidItalic.TTF")
@@ -24,9 +25,11 @@
 
 
 .mid-container{
-    margin-left: 15%;
+    margin-left: 10%;
     margin-right: 20%;
     height: 100%;
+
+
 }
 
 .mid-column-left{
@@ -75,7 +78,12 @@
     background: transparent;
     border: transparent;
 }
+.button-text:hover{
+    color:#3174ad;
+    font-size:large;
+    curser:pointer;
 
+}
 .separator{
     margin-top: 0;
     margin-bottom: 5px;
@@ -87,3 +95,81 @@
     font-style: italic;
 }
 
+.buttonStyle {
+    width: 100%;
+    height: 50px;
+    position: relative;
+    font-family: "Biko", sans-serif;
+    overflow: hidden;
+    text-align: center;
+    display: block;
+    line-height:1.1;
+
+}
+a:hover{
+    font-color:lightblue;
+    font-size:large;
+}
+svg {
+    position: absolute;
+    display:block;
+    top: 0;
+    width:100%;
+    height:50px;
+    left: 120px;
+    border-radius:10px;
+    fill:transparent;
+}
+
+path {
+    stroke-width: 2;
+    /*stroke: #fff000;*/
+    stroke:transparent;
+    fill: none;
+    stroke-dasharray: 400;
+    -webkit-transition: -webkit-transform 1s linear;
+    -moz-transition: -moz-transform 1s linear;
+    transition: transform 1s linear;
+}
+
+.buttonStyle:hover {
+    cursor: pointer;
+}
+
+svg:hover path {
+    animation: dash 2s reverse cubic-bezier(0.45, 0.03, 0.51, 0.95) 0s infinite;
+    -webkit-animation: dash 2s reverse cubic-bezier(0.45, 0.03, 0.51, 0.95) 0s infinite;
+    -moz-animation: dash 2s reverse cubic-bezier(0.45, 0.03, 0.51, 0.95) 0s infinite;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;}
+
+@-webkit-keyframes dash{
+    to {
+        fill: transparent;
+        stroke: lightblue;
+        stroke-linecap: round;
+        stroke-linejoin: round;
+        stroke-dashoffset: 300;
+        stroke-dasharray: 300 0;
+    }
+}
+@keyframes dash{
+    to {
+        fill: transparent;
+        stroke: lightblue;
+        stroke-linecap: round;
+        stroke-linejoin: round;
+        stroke-dashoffset: 300;
+        stroke-dasharray: 300 0;
+    }
+}
+@-moz-keyframes dash{
+    to {
+        fill: transparent;
+        stroke: lightblue;
+        stroke-linecap: round;
+        stroke-linejoin: round;
+        stroke-dashoffset: 300;
+        stroke-dasharray: 300 0;
+    }
+}
