animation done for the first page and confirmed it does not interfere with any other page style

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -94,3 +94,74 @@
     font-style: italic;
 }
 
+.buttonStyle {
+    background: transparent;
+    border:transparent;
+    position: relative;
+    font-family: "Biko", sans-serif;
+    overflow: hidden;
+    text-align: center;
+    line-height:1.1;
+
+}
+
+/*animated typing effect */
+.text{
+    color: grey;
+    margin: 10px 0 0 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 30em;
+    animation: type 3s steps(60, end);
+}
+
+.text:nth-child(2){
+    animation: type2 8s steps(60, end);
+}
+
+
+span{
+    animation: blink 1s infinite;
+}
+
+@keyframes type{
+    from { width: 0; }
+}
+
+@keyframes type2{
+    0%{width: 0;}
+    50%{width: 0;}
+    100%{ width: 100%; }
+}
+
+@keyframes blink{
+    to{opacity: .0;}
+}
+
+
+/* ended animated typing effect */
+
+/* make the search course button bouncing */
+@keyframes bounce {
+    0%, 20%, 60%, 100% {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+    }
+
+    40% {
+        -webkit-transform: translateY(-10px);
+        transform: translateY(-10px);
+    }
+
+    80% {
+        -webkit-transform: translateY(-5px);
+        transform: translateY(-5px);
+    }
+}
+
+.buttonStyle:hover{
+    font-color:lightblue;
+    font-size:large;
+    text-align:center;
+    animation:  bounce 2s;
+}
