updated UserFriends to match overall style

--- a/src/view/social/UserFriends.css
+++ b/src/view/social/UserFriends.css
@@ -1,30 +1,47 @@
-.img {
-    border-radius: 50%
+
+.friend-profile-container {
+    width: 55px;
+    height: 55px;
+    overflow: hidden;
+    align-items: center;
+    border-radius: 50%;
+    border: solid 1px #ebebeb;
+    margin-left: 10px;
+    margin-right: 20px;
+}
+
+.friend-profile {
+    float: left;
+    height: 100%;
 }
 
 .name {
-    font-size: 30px;
+    font-size: small;
+    margin-right: 20px;
+}
+
+.group{
+    margin-right: 20px;
 }
 
 .group .button {
     background: none !important;
     border: none;
-    color: blue;
     padding: 0;
-    font-size: 20px;
+    color: #2f5597;
+    font-size: small;
     text-align: center;
     display: block;
-    border-bottom: 1px solid blue;
     cursor: pointer;
 }
 
 .button_red {
     background: none !important;
     border: none;
-    color: blue;
+    font-size: small;
     padding: 0;
+    color: #2f5597;
     text-align: center;
     cursor: pointer;
-    border-bottom: 1px solid blue;
 }
 
