--- a/src/view/MainLayout.css
+++ b/src/view/MainLayout.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Varela+Round');
+
 @font-face {
     font-family: "Harlow Solid Italic";
     src: url("../font/HarlowSolidItalic.TTF")
@@ -12,8 +13,9 @@
 @font-face {
     font-family: "Varela Round', sans-serif";
     src: url('https://fonts.googleapis.com/css?family=Varela+Round')
-   /* src: url("../font/Helvetica.ttf")*/
+    /* src: url("../font/Helvetica.ttf")*/
 }
+
 /* ensure there is no gap*/
 html {
     background: url("../image/background.jpg") no-repeat center center fixed;
@@ -23,18 +25,17 @@ html {
     background-size: cover;
 }
 
-.body-main-layout{
-    position:absolute;
-    top:0;
-    right:0;
-    bottom:0;
-    left:0;
+.body-main-layout {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     background: url("../image/background.jpg") no-repeat 49% center fixed;
     background-size: cover;
 }
 
-
-.nav-bar{
+.nav-bar {
     margin-top: 0;
     width: 100%;
     height: 48px;
@@ -43,17 +44,16 @@ html {
     box-shadow: 0 0 40px 3px black;
 }
 
-.below-nav-bar{
+.below-nav-bar {
     float: top;
     height: calc(100% - 45px);
     width: 100%;
     overflow-y: auto;
 }
 
-
-.middle-panel{
+.middle-panel {
     margin-top: 1.5%;
-    min-width:500px;
+    min-width: 500px;
     width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -61,25 +61,25 @@ html {
     background-color: white;
 }
 
-.above-middle-panel{
+.above-middle-panel {
     margin-top: 1.5%;
-    min-width:500px;
+    min-width: 500px;
     width: 65%;
     margin-left: auto;
     margin-right: auto;
 
 }
 
-.logo-main{
+.logo-main {
     float: left;
-    font-family: "Harlow Solid Italic",serif;
+    font-family: "Harlow Solid Italic", serif;
     font-size: 165%;
     margin-left: 20%;
     margin-top: 3px;
     margin-right: 1%;
 }
 
-.button-nav-bar{
+.button-nav-bar {
     float: left;
     margin-top: 15px;
     margin-left: .5%;
@@ -88,6 +88,7 @@ html {
     color: #2f5597;
     background: transparent;
     border: transparent;
+    outline: none;
 }
 
 /*add similar bouncing effect and underline */
@@ -108,12 +109,12 @@ html {
     }
 }
 
-.button-nav-bar:hover{
+.button-nav-bar:hover {
     animation: bounce 2s;
     font-size: medium;
 }
 
-.logout-button{
+.logout-button {
     float: right;
     margin-top: 15px;
     margin-left: 1%;
@@ -124,7 +125,8 @@ html {
     background: transparent;
     border: transparent;
 }
-.logout-button:hover{
+
+.logout-button:hover {
     font-size: large;
     color: #3174ad;
 }
