fix style overwritten in userschedule.js (text blink problem)

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -106,7 +106,7 @@
 }
 
 /*animated typing effect */
-.text{
+.subtitle-text{
     color: grey;
     margin: 10px 0 0 10px;
     white-space: nowrap;
@@ -115,14 +115,11 @@
     animation: type 3s steps(60, end);
 }
 
-.text:nth-child(2){
+.subtitle-text:nth-child(2){
     animation: type2 8s steps(60, end);
 }
 
 
-span{
-    animation: blink 1s infinite;
-}
 
 @keyframes type{
     from { width: 0; }
