--- a/src/view/MainLayout.css
+++ b/src/view/MainLayout.css
@@ -17,13 +17,6 @@
 }
 
 /* ensure there is no gap*/
-html {
-    background: url("../image/background.jpg") no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
 
 .body-main-layout {
     position: absolute;
@@ -33,6 +26,10 @@ html {
     left: 0;
     background: url("../image/background.jpg") no-repeat 49% center fixed;
     background-size: cover;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover
 }
 
 .nav-bar {
