--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Special+Elite');
 @font-face {
     font-family: "Harlow Solid Italic";
     src: url("../../font/HarlowSolidItalic.TTF")
@@ -10,9 +11,12 @@
 }
 
 @font-face {
-    font-family: "Biko";
-    src: url("../../font/Biko.otf")
+    font-family: 'Special Elite', cursive;
+    /*src: url("../../font/Biko.otf")*/
+    src: url("https://fonts.googleapis.com/css?family=Special+Elite")
 }
+
+
 
 .body{
     position:absolute;
@@ -63,23 +67,18 @@
     font-size: 400%;
 }
 
-.subtitle-text{
-    font-family: "Calibri Light", sans-serif;
-    font-size: medium;
-    color: grey;
-}
 
 .button-text{
-    font-family: "Biko", sans-serif;
-    font-size: medium;
+    font-family: 'Roboto', sans-serif;
     cursor: pointer;
     color: #2f5597;
+    font-size: small;
     background: transparent;
     border: transparent;
 }
 .button-text:hover{
     color:#3174ad;
-    font-size:large;
+    font-size:medium;
     curser:pointer;
 
 }
@@ -89,16 +88,16 @@
 }
 
 .label-text{
-    font-family: "Biko", sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: medium;
-    font-style: italic;
+
 }
 
 .buttonStyle {
     background: transparent;
     border:transparent;
     position: relative;
-    font-family: "Biko", sans-serif;
+    font-family: 'Roboto', sans-serif;
     overflow: hidden;
     text-align: center;
     line-height:1.1;
@@ -107,6 +106,8 @@
 
 /*animated typing effect */
 .subtitle-text{
+    font-size: medium;
+    font-family: 'Roboto', sans-serif;
     color: grey;
     margin: 10px 0 0 10px;
     white-space: nowrap;
