modifying sign up button and match with style

--- a/src/view/credentials/MainLoginSignup.css
+++ b/src/view/credentials/MainLoginSignup.css
@@ -64,7 +64,7 @@
 
 .logo{
     font-family: "Harlow Solid Italic", sans-serif;
-    font-size: 400%;
+    font-size: 500%; /*orignal is 400%*/
 }
 
 
@@ -72,7 +72,7 @@
     font-family: 'Roboto', sans-serif;
     cursor: pointer;
     color: #2f5597;
-    font-size: small;
+    font-size: medium;
     background: transparent;
     border: transparent;
 }
@@ -106,14 +106,14 @@
 
 /*animated typing effect */
 .subtitle-text{
-    font-size: medium;
+    font-size: Large;
     font-family: 'Roboto', sans-serif;
     color: grey;
     margin: 10px 0 0 10px;
     white-space: nowrap;
     overflow: hidden;
     width: 30em;
-    animation: type 3s steps(60, end);
+    animation: type 3s steps(30, end);
 }
 
 .subtitle-text:nth-child(2){
@@ -128,8 +128,8 @@
 
 @keyframes type2{
     0%{width: 0;}
-    50%{width: 0;}
-    100%{ width: 100%; }
+    50%{width: 20%;}
+    100%{ width: 99%; }
 }
 
 @keyframes blink{
@@ -162,4 +162,12 @@
     font-size:large;
     text-align:center;
     animation:  bounce 2s;
+}
+.buttonPadding{
+    margin-top: 30px;
+}
+.thirdpartymenssage{
+    font-size: small;
+    color:grey;
+
 }
